--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 # Habilitar console do H2
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# Configurações do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-# Mostrar SQL no console
+# Configurações comuns
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+# Perfil ativo padrão
+spring.profiles.active=h2
