--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'log4j:log4j:1.2.17'
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+
 }
 
 test {
